--- a/static/ppol.html
+++ b/static/ppol.html
@@ -1,28 +1,14 @@
 <html>
 <head>
 	<title>Privacy Policy</title>
-	<link rel="shortcut icon" href="favicon.ico">
-<meta name=viewport content="width=device-width, initial-scale=1">
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-130783061-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-130783061-1');
-</script>
-
-
 </head>
 <body><h1>Privacy Policy</h1>
 
 
-<p>Effective date: December 18, 2018</p>
+<p>Effective date: March 31, 2019</p>
 
 
-<p>Bot Solutions, LLC ("us", "we", or "our") operates the http://botsol.net website and the GORT interactive messaging bot (hereinafter referred to as the "Service").</p>
+<p>Vektre Labs ("us", "we", or "our") operates the https://yalebot.herokuapp.com website and the GORT interactive messaging bot (hereinafter referred to as the "Service").</p>
 
 <p>This page informs you of our policies regarding the collection, use and disclosure of personal data when you use our Service and the choices you have associated with that data.</p>
 
@@ -32,7 +18,7 @@
 <ul>
     <li>
         <p><strong>Service</strong></p>
-                <p>Service means the http://botsol.net website and the GORT interactive messaging bot operated by Bot Solutions, LLC</p>
+                <p>Service means the https://yalebot.herokuapp.com website and the GORT interactive messaging bot operated by Vektre Labs</p>
             </li>
     <li>
         <p><strong>Personal Data</strong></p>
@@ -100,8 +86,8 @@
     <li><strong>Security Cookies.</strong> We use Security Cookies for security purposes.</li>
     </ul>
 
-<h2>Use of Data</h2> 
-<p>Bot Solutions, LLC uses the collected data for various purposes:</p>    
+<h2>Use of Data</h2>
+<p>Vektre Labs uses the collected data for various purposes:</p>
 <ul>
     <li>To provide and maintain our Service</li>
     <li>To notify you about changes to our Service</li>
@@ -112,10 +98,10 @@
     <li>To detect, prevent and address technical issues</li>
     <li>To provide you with news, special offers and general information about other goods, services and events which we offer that are similar to those that you have already purchased or enquired about unless you have opted not to receive such information</li></ul>
 
-   
+
 <h2>Legal Basis for Processing Personal Data under the General Data Protection Regulation (GDPR)</h2>
-<p>If you are from the European Economic Area (EEA), Bot Solutions, LLC legal basis for collecting and using the personal information described in this Privacy Policy depends on the Personal Data we collect and the specific context in which we collect it.</p>
-<p>Bot Solutions, LLC may process your Personal Data because:</p>
+<p>If you are from the European Economic Area (EEA), Vektre Labs legal basis for collecting and using the personal information described in this Privacy Policy depends on the Personal Data we collect and the specific context in which we collect it.</p>
+<p>Vektre Labs may process your Personal Data because:</p>
 <ul>
     <li>We need to perform a contract with you</li>
     <li>You have given us permission to do so</li>
@@ -123,29 +109,29 @@
     <li>For payment processing purposes</li>    <li>To comply with the law</li>
 </ul>
 
-    
-<h2>Retention of Data</h2>    
-<p>Bot Solutions, LLC will retain your Personal Data only for as long as is necessary for the purposes set out in this Privacy Policy. We will retain and use your Personal Data to the extent necessary to comply with our legal obligations (for example, if we are required to retain your data to comply with applicable laws), resolve disputes and enforce our legal agreements and policies.</p>
-<p>Bot Solutions, LLC will also retain Usage Data for internal analysis purposes. Usage Data is generally retained for a shorter period of time, except when this data is used to strengthen the security or to improve the functionality of our Service, or we are legally obligated to retain this data for longer periods.</p>    
+
+<h2>Retention of Data</h2>
+<p>Vektre Labs will retain your Personal Data only for as long as is necessary for the purposes set out in this Privacy Policy. We will retain and use your Personal Data to the extent necessary to comply with our legal obligations (for example, if we are required to retain your data to comply with applicable laws), resolve disputes and enforce our legal agreements and policies.</p>
+<p>Vektre Labs will also retain Usage Data for internal analysis purposes. Usage Data is generally retained for a shorter period of time, except when this data is used to strengthen the security or to improve the functionality of our Service, or we are legally obligated to retain this data for longer periods.</p>
 
 <h2>Transfer of Data</h2>
 <p>Your information, including Personal Data, may be transferred to — and maintained on — computers located outside of your state, province, country or other governmental jurisdiction where the data protection laws may differ from those of your jurisdiction.</p>
 <p>If you are located outside United States and choose to provide information to us, please note that we transfer the data, including Personal Data, to United States and process it there.</p>
 <p>Your consent to this Privacy Policy followed by your submission of such information represents your agreement to that transfer.</p>
-<p>Bot Solutions, LLC will take all the steps reasonably necessary to ensure that your data is treated securely and in accordance with this Privacy Policy and no transfer of your Personal Data will take place to an organisation or a country unless there are adequate controls in place including the security of your data and other personal information.</p>
+<p>Vektre Labs will take all the steps reasonably necessary to ensure that your data is treated securely and in accordance with this Privacy Policy and no transfer of your Personal Data will take place to an organisation or a country unless there are adequate controls in place including the security of your data and other personal information.</p>
 
 <h2>Disclosure of Data</h2>
 <h3>Business Transaction</h3>
-<p>If Bot Solutions, LLC is involved in a merger, acquisition or asset sale, your Personal Data may be transferred. We will provide notice before your Personal Data is transferred and becomes subject to a different Privacy Policy.</p>    
+<p>If Vektre Labs is involved in a merger, acquisition or asset sale, your Personal Data may be transferred. We will provide notice before your Personal Data is transferred and becomes subject to a different Privacy Policy.</p>
 
 <h3>Disclosure for Law Enforcement</h3>
-<p>Under certain circumstances, Bot Solutions, LLC may be required to disclose your Personal Data if required to do so by law or in response to valid requests by public authorities (e.g. a court or a government agency).</p>
+<p>Under certain circumstances, Vektre Labs may be required to disclose your Personal Data if required to do so by law or in response to valid requests by public authorities (e.g. a court or a government agency).</p>
 
 <h3>Legal Requirements</h3>
-<p>Bot Solutions, LLC may disclose your Personal Data in the good faith belief that such action is necessary to:</p>
+<p>Vektre Labs may disclose your Personal Data in the good faith belief that such action is necessary to:</p>
 <ul>
     <li>To comply with a legal obligation</li>
-    <li>To protect and defend the rights or property of Bot Solutions, LLC</li>
+    <li>To protect and defend the rights or property of Vektre Labs</li>
     <li>To prevent or investigate possible wrongdoing in connection with the Service</li>
     <li>To protect the personal safety of users of the Service or the public</li>
     <li>To protect against legal liability</li>
@@ -154,12 +140,12 @@
 <h2>Security of Data</h2>
 <p>The security of your data is important to us but remember that no method of transmission over the Internet or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your Personal Data, we cannot guarantee its absolute security.</p>
 
-<h2>Our Policy on "Do Not Track" Signals under the California Online Protection Act (CalOPPA)</h2>    
+<h2>Our Policy on "Do Not Track" Signals under the California Online Protection Act (CalOPPA)</h2>
 <p>We do not support Do Not Track ("DNT"). Do Not Track is a preference you can set in your web browser to inform websites that you do not want to be tracked.</p>
 <p>You can enable or disable Do Not Track by visiting the Preferences or Settings page of your web browser.</p>
 
 <h2>Your Data Protection Rights under the General Data Protection Regulation (GDPR)</h2>
-<p>If you are a resident of the European Economic Area (EEA), you have certain data protection rights. Bot Solutions, LLC aims to take reasonable steps to allow you to correct, amend, delete or limit the use of your Personal Data.</p>
+<p>If you are a resident of the European Economic Area (EEA), you have certain data protection rights. Vektre Labs aims to take reasonable steps to allow you to correct, amend, delete or limit the use of your Personal Data.</p>
 <p>If you wish to be informed about what Personal Data we hold about you and if you want it to be removed from our systems, please contact us.</p>
 <p>In certain circumstances, you have the following data protection rights:</p>
 <ul>
@@ -168,7 +154,7 @@
     </li>
     <li>
         <p><strong>The right of rectification.</strong> You have the right to have your information rectified if that information is inaccurate or incomplete.</p>
-    </li> 
+    </li>
     <li>
         <p><strong>The right to object.</strong> You have the right to object to our processing of your Personal Data.</p>
     </li>
@@ -179,7 +165,7 @@
         <p><strong>The right to data portability.</strong> You have the right to be provided with a copy of the information we have on you in a structured, machine-readable and commonly used format.</p>
     </li>
     <li>
-        <p><strong>The right to withdraw consent.</strong> You also have the right to withdraw your consent at any time where Bot Solutions, LLC relied on your consent to process your personal information.</p>
+        <p><strong>The right to withdraw consent.</strong> You also have the right to withdraw your consent at any time where Vektre Labs relied on your consent to process your personal information.</p>
     </li>
 </ul>
 <p>Please note that we may ask you to verify your identity before responding to such requests.</p>
@@ -191,7 +177,7 @@
 <p>These third parties have access to your Personal Data only to perform these tasks on our behalf and are obligated not to disclose or use it for any other purpose.</p>
 
 <h3>Analytics</h3>
-<p>We may use third-party Service Providers to monitor and analyse the use of our Service.</p>    
+<p>We may use third-party Service Providers to monitor and analyse the use of our Service.</p>
 <ul>
         <li>
         <p><strong>Google Analytics</strong></p>
@@ -200,7 +186,7 @@
     </li>
                                 </ul>
 
-   
+
 <h3>Payments</h3>
 <p>We may provide paid products and/or services within the Service. In that case, we use third-party services for payment processing (e.g. payment processors).</p>
 <p>We will not store or collect your payment card details. That information is provided directly to our third-party payment processors whose use of your personal information is governed by their Privacy Policy. These payment processors adhere to the standards set by PCI-DSS as managed by the PCI Security Standards Council, which is a joint effort of brands like Visa, MasterCard, American
@@ -214,13 +200,13 @@ Express and Discover. PCI-DSS requirements help ensure the secure handling of pa
                                                 </ul>
 <h3>GroupMe integration</h3>
 <ul>
-  <li>We are an independent company not affiliated with GroupMe, Inc.</li> 
+  <li>We are an independent company not affiliated with GroupMe, Inc.</li>
   <li>In order for us to provide the Service, we may ask you to grant us the authorization to access your GroupMe account using the GroupMe REST API.</li>
   <li>The data we receive from GroupMe may include Personal Data and Usage Data including but not limited to your GroupMe user identity, first and last names, phone number, email address, listings of active and inactive groups, contacts, calendar events, chat activity, service metadata. </li>
   <li>We never share this data with any 3rd parties, unless required to do so by law.</li>
-  <li>When using the Service via a GroupMe app or web client, all applicable GroupMe policies and user agreements are in effect. We have no control over and assume no responsibility for the content, privacy policies or practices of GroupMe, Inc.</li> 
+  <li>When using the Service via a GroupMe app or web client, all applicable GroupMe policies and user agreements are in effect. We have no control over and assume no responsibility for the content, privacy policies or practices of GroupMe, Inc.</li>
   <li>The GroupMe privacy policy can be viewed at <a href="https://groupme.com/privacy">https://groupme.com/privacy</a></li>
-</ul>	  
+</ul>
 
 <h2>Links to Other Sites</h2>
 <p>Our Service may contain links to other sites that are not operated by us. If you click a third party link, you will be directed to that third party's site. We strongly advise you to review the Privacy Policy of every site you visit.</p>
@@ -241,10 +227,8 @@ Express and Discover. PCI-DSS requirements help ensure the secure handling of pa
 <h2>Contact Us</h2>
 <p>If you have any questions about this Privacy Policy, please contact us:</p>
 <ul>
-        <li>By email: admin@botsol.net</li>
-          
+        <li>By email: me@erikboesen.com</li>
 </ul>
-<br><br><a href="#" onclick="window.close();return false;">Close this window</a>
 
 </body>
 </html>
