Remove GORT references in TOC and PP

--- a/static/ppol.html
+++ b/static/ppol.html
@@ -8,7 +8,7 @@
 <p>Effective date: March 31, 2019</p>
 
 
-<p>Vektre Labs ("us", "we", or "our") operates the https://yalebot.herokuapp.com website and the GORT interactive messaging bot (hereinafter referred to as the "Service").</p>
+<p>Vektre Labs ("us", "we", or "our") operates the https://yalebot.herokuapp.com website and the Yalebot interactive messaging bot (hereinafter referred to as the "Service").</p>
 
 <p>This page informs you of our policies regarding the collection, use and disclosure of personal data when you use our Service and the choices you have associated with that data.</p>
 
@@ -18,7 +18,7 @@
 <ul>
     <li>
         <p><strong>Service</strong></p>
-                <p>Service means the https://yalebot.herokuapp.com website and the GORT interactive messaging bot operated by Vektre Labs</p>
+                <p>Service means the https://yalebot.herokuapp.com website and the Yalebot interactive messaging bot operated by Vektre Labs</p>
             </li>
     <li>
         <p><strong>Personal Data</strong></p>
