--- a/static/tac.html
+++ b/static/tac.html
@@ -5,19 +5,19 @@
     <body>
         <h1>Terms and Conditions</h1>
         <p>Last updated: March 31, 2019</p>
-        <p>Please read these Terms and Conditions ("Terms", "Terms and Conditions") carefully before using the http://botsol.net website and the GORT interactive messaging bot (together, or individually, the "Service") operated by Vektre Labs ("us", "we", or "our").</p>
+        <p>Please read these Terms and Conditions ("Terms", "Terms and Conditions") carefully before using the http://botsol.net website and the Yalebot interactive messaging bot (together, or individually, the "Service") operated by Vektre Labs ("us", "we", or "our").</p>
         <p>Your access to and use of the Service is conditioned upon your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who wish to access or use the Service.</p>
         <p>By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you do not have permission to access the Service.</p>
         <h3>GroupMe account access authorization</h3>
         <p>We are an independent company not affiliated with GroupMe INC. </p>
-        <p>By activating a GORT instance in your chatroom, you grant us full unrestricted access to your GroupMe account, and authorize us to use it to access any data and perform any actions on your behalf as necessary for us to provide the Service.</p>
+        <p>By activating a Yalebot instance in your chatroom, you grant us full unrestricted access to your GroupMe account, and authorize us to use it to access any data and perform any actions on your behalf as necessary for us to provide the Service.</p>
         <P>For an explanation of what data GroupMe makes available to us, please see the GroupMe privacy policy, as well as all other applicable policies, disclosures, and user agreements on the GroupMe website.</P>
         <P>For an explanation of how we treat your data, please see our Privacy Policy.</P>
-        <p>If you wish to revoke the authorization, you must unisntall all your GORT instances and revoke the GroupMe access token issued to us (by using the Token Management feature of your GroupMe app or by changing your GroupMe password).</p>
+        <p>If you wish to revoke the authorization, you must unisntall all your Yalebot instances and revoke the GroupMe access token issued to us (by using the Token Management feature of your GroupMe app or by changing your GroupMe password).</p>
         <h2>Communications</h2>
         <p>By participating in any role in any GroupMe chatroom associated with the Service, you agree to receive electronic communications from us, other group members, and the Service that may come in a form of text messages, GroupMe group messages, direct messages, mentions, likes, in-app notifications. If you do not wish to receive such communications, leave all such chatrooms.</p>
-        <p>By using our Service as a GORT instance owner, Co-owner, or Administrator, you take full responsibility for all the communications your respective GORT instances send, including but lot limited to automatic responses to commands and events, results of running scheduled tasks, etc. </p>
-        <p>By using our Service as GORT instance owner, you also agree to receive service announcements, newsletters, marketing or promotional materials and other information we may send. However, you may opt out of receiving any, or all, of these communications from us by following the unsubscribe link or instructions provided in any email we send.</p>
+        <p>By using our Service as a Yalebot instance owner, Co-owner, or Administrator, you take full responsibility for all the communications your respective Yalebot instances send, including but lot limited to automatic responses to commands and events, results of running scheduled tasks, etc. </p>
+        <p>By using our Service as Yalebot instance owner, you also agree to receive service announcements, newsletters, marketing or promotional materials and other information we may send. However, you may opt out of receiving any, or all, of these communications from us by following the unsubscribe link or instructions provided in any email we send.</p>
         <h2>Purchases</h2>
         <p>If you wish to purchase any product or service made available through the Service ("Purchase"), you may be asked to supply certain information relevant to your Purchase including, without limitation, your credit card number, the expiration date of your credit card, your billing address, and your shipping information.</p>
         <p>You represent and warrant that: (i) you have the legal right to use any credit card(s) or other payment method(s) in connection with any Purchase; and that (ii) the information you supply to us is true, correct and complete.</p>
@@ -52,9 +52,9 @@
         <p>Vektre Labs has the right but not the obligation to monitor and edit all Content provided by users.</p>
         <p>In addition, Content found on or through this Service are the property of Vektre Labs or used with permission. You may not distribute, modify, transmit, reuse, download, repost, copy, or use said Content, whether in whole or in part, for commercial purposes or for personal gain, without express advance written permission from us.</p>
         <h2>Accounts</h2>
-        <p>When you create an account with us by creating a GORT instance, you guarantee that you are above the age of 18, and that the information you provide us is accurate, complete, and current at all times. Inaccurate, incomplete, or obsolete information may result in the immediate termination of your account on the Service.</p>
+        <p>When you create an account with us by creating a Yalebot instance, you guarantee that you are above the age of 18, and that the information you provide us is accurate, complete, and current at all times. Inaccurate, incomplete, or obsolete information may result in the immediate termination of your account on the Service.</p>
         <p>You are responsible for maintaining the confidentiality of your account and password, including but not limited to the restriction of access to your computer and/or account. You agree to accept responsibility for any and all activities or actions that occur under your account and/or password, whether your password is with our Service or a third-party service. You must notify us immediately upon becoming aware of any breach of security or unauthorized use of your account.</p>
-        <p>You may not use as a username the name of another person or entity or that is not lawfully available for use, a name or trademark that is subject to any rights of another person or entity other than you, without appropriate authorization. You may not use as a username any name that is offensive, vulgar or obscene. You may not use the username 'GORT' which is reserved for the Service.</p>
+        <p>You may not use as a username the name of another person or entity or that is not lawfully available for use, a name or trademark that is subject to any rights of another person or entity other than you, without appropriate authorization. You may not use as a username any name that is offensive, vulgar or obscene. You may not use the username 'Yalebot' which is reserved for the Service.</p>
         <p>We reserve the right to refuse service, terminate accounts, remove or edit content, or cancel orders in our sole discretion.</p>
         <h2>Links To Other Web Sites</h2>
         <p>Our Service may contain links to third party web sites or services that are not owned or controlled by Vektre Labs</p>
@@ -63,7 +63,7 @@
         <p>We strongly advise you to read the terms and conditions and privacy policies of any third party web sites or services that you visit.</p>
         <h2>Termination</h2>
         <p>We may terminate or suspend your account(s) and bar access to the Service immediately, without prior notice or liability, under our sole discretion, for any reason whatsoever and without limitation, including but not limited to a breach of the Terms.</p>
-        <p>If you wish to terminate your account(s), you may uninstall your GORT instances at any time.</p>
+        <p>If you wish to terminate your account(s), you may uninstall your Yalebot instances at any time.</p>
         <p>All provisions of the Terms which by their nature should survive termination shall survive termination, including, without limitation, ownership provisions, warranty disclaimers, indemnity and limitations of liability.</p>
         <h2>Indemnification</h2>
         <p>You agree to defend, indemnify and hold harmless Vektre Labs and its licensee and licensors, and their employees, contractors, agents, officers and directors, from and against any and all claims, damages, obligations, losses, liabilities, costs or debt, and expenses (including but not limited to attorney's fees), resulting from or arising out of a) your use and access of the Service, by you or any person using your account and password; b) a breach of these Terms, or c) Content posted on the Service.</p>
